# evstatsd

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
common/: common.h
packaging/rpm/: evstatsd.spec  statsd.init  statsd.sysconfig
statsd/: .gitignore  CMakeLists.txt  parse.y  statsd.8  statsd.c  statsd.conf  statsd.h
